Change visibility to fix transition out effects
transition out effects were happening for modal and mobile nav.
this also fixed the invisible modal.

--- a/shared.css
+++ b/shared.css
@@ -165,6 +165,7 @@ main {
 .mobile-nav {
   transform: translateX(-100%);
   transition: transform 300ms ease-out;
+  visibility: hidden;
   /* display: none; */
   position: fixed;
   z-index: 101;
@@ -225,6 +226,7 @@ main {
 
 .modal {
   position: fixed;
+  visibility: hidden;
   opacity: 0;
   transform: translateY(-3rem);
   transition: opacity 200ms ease-out, transform 300ms cubic-bezier(0.63, 1.01, 0.58, 1.13);
@@ -278,6 +280,7 @@ main {
   display: block;
   opacity: 1;
   transform: translateY(0) ;
+  visibility: visible;
 }
 
 @media (min-width: 40rem) {
